--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-pandas
-numpy
-polars
-plotly
-dash
-networkx
+flask>=2.0.0
+polars>=0.20.0
+plotly>=5.3.0
+dash>=2.16.0
+networkx>=3.3.0
+requests>=2.31.0
+maturin>=1.4.0
+pytest>=7.0.0
+pandas>=1.3.0
+numpy>=1.21.0
 openpyxl
-requests
